# kuberna-labs

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .env.render  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitkeep  .prettierignore  .prettierrc.json  .renderignore  .solhint.json  API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FAQ.md  GROWTH-IMPLEMENTATION-LOG.md  KITE.md  LICENSE  OPEN_SOURCE_SETUP_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  commit-additional-files.sh  commit-open-source-files.sh  compile-contracts.js  docker-compose.yml  eslint.config.js  gas-report.txt  hardhat.config.ts  make-commits.sh  (+9 more)
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  stale.yml
backend/: .env.example  .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
contracts/: AgentRegistry.sol  Attestation.sol  CertificateNFT.sol  CourseNFT.sol  CrossChainRouter.sol  (+14 more)
contracts/near_contracts/: Cargo.toml
contracts/solana_contracts/: Anchor.toml  Cargo.toml  README.md
contracts/solana_contracts/programs/: Cargo.toml
contracts/solana_contracts/programs/src/: agent.rs  attestation.rs  certificate.rs  course.rs  cross_chain.rs  dispute.rs  escrow.rs  fee_manager.rs  governance.rs  governance_token.rs  intent.rs  lib.rs  modules.rs  multisig.rs  payment.rs  price_oracle.rs  reputation.rs  subscription.rs  treasury.rs  vesting.rs  workshop.rs
contracts/solana_contracts/tests/: kuberna.ts
(+438 files in other folders)
