[package]
name = "kuberna-near"
version = "0.1.0"
authors = ["Kuberna Labs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0"
near-sdk macros = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
u256 = "2.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = true