[package]
name = "kuberna-solana"
version = "0.1.0"
edition = "2021"
description = "Kuberna Labs - 18 Smart Contracts on Solana"

[lib]
path = "src/lib.rs"

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
anchor-spl-associated-token = "0.29"

[features]
default = []

[profile.release]
panic = "abort"